--- a/api-node/plop/templates/controllers/update-controller.hbs
+++ b/api-node/plop/templates/controllers/update-controller.hbs
@@ -3,20 +3,21 @@ import { {{pascalCase model}}Repository } from '@/repositories/{{kebabCase model
 import { Update{{pascalCase model}}UseCase } from '@/use-cases/{{kebabCase model}}/update-{{kebabCase model}}-use-case'
 import { z } from 'zod'
 
+
 // Importação do schema gerado pela lib zod-prisma-types
-import { {{pascalCase model}}UpdateInputSchema } from '@/schemas/zod'
+import { {{pascalCase model}}UpdateManyMutationInputSchema } from '@/schemas/zod'
 
 export async function Update{{pascalCase model}}Controller(
   request: FastifyRequest<{
     Params: { id: string }
-    Body: z.infer<typeof {{pascalCase model}}UpdateInputSchema>
+    Body: z.infer<typeof {{pascalCase model}}UpdateManyMutationInputSchema>
   }>,
   reply: FastifyReply,
 ) {
   const { id } = request.params
   const { body } = request
 
-  const parsed{{pascalCase model}} = {{pascalCase model}}UpdateInputSchema.parse(body)
+  const parsed{{pascalCase model}} = {{pascalCase model}}UpdateManyMutationInputSchema.parse(body)
   
   const {{camelCase model}}Repository = new {{pascalCase model}}Repository()
   const update{{pascalCase model}}UseCase = new Update{{pascalCase model}}UseCase({{camelCase model}}Repository)
